--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,100 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap');
+
+*{
+  margin:0;
+  padding:0;
+  outline:0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
+html, body, #root {
+  min-height: 100%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body{
+  background: #000 url('./assets/background.jpg');
+  background: cover;
+  -webkit-font-smoothing:antialiased !important;
+}
+
+body, input, button {
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-size: 14px;
+}
+
+.container{
+  margin:80px auto;
+  max-width: 450px;
+  width:100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #09d3ac;
+.content{
+  width: 100%;
+  background: #FFF;
+  margin-top:50px;
+  border-radius: 2px;
+  padding: 30px;
+}
+
+.content > p {
+  font-size:22px;
+  line-height: 30px;
+  margin-bottom: 30px;
+}
+
+.content form{
+  display: flex;
+  flex-direction: column;
+}
+
+.content form label{
+  color:#444;
+  font-weight: bold;
+  margin-bottom: 8px;
+}
+
+.content form label::after {
+  content: attr(data-required-symbol) ;
+  color: red ;
+}
+
+.content form label span{
+  font-weight: normal;
+  color:#999;
+  font-size: 12px;
+}
+
+.content form label.alert{
+  font-weight: normal;
+  color:#f00;
+  font-size: 12px;
+}
+
+.content input{
+  margin-bottom: 20px;
+  border: 1px solid #ddd;
+  border-radius: 2px;
+  height: 45px;
+  padding: 0 15px;
+
+}
+
+.content button.btn {
+  border:0;
+  border-radius: 2px;
+  height: 42px;
+  width: 100%;
+  padding:0 20px;
+  font-size: 16px;
+  font-weight: bold;
+  background: #f05a5b;
+  color:#fff;
+  cursor: pointer;
+}
+
+.content button.btn:hover {
+  background: #e14f50;
 }
